--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -24,10 +24,72 @@ import { dropdownInput as multiSelect, dropdownCSS } from "/helpers/multiSelect.
 ```
 
 ```{ojs}
+// Language setup - MUST be defined before includes
+import { lang as Lang } from "/helpers/lang.js"
+
+general_translations = await FileAttachment("/data/shared/generalTranslations.json").json()
+
+languages = [
+  { key: "en", label: "English", locale: 'en-US' },
+  { key: "fr", label: "Français", locale: 'fr-FR' }
+]
+
+defaultLangKey = {
+  const name = "lang";
+  const list = languages.map((d) => d.key);
+  const defaultKey = "en";
+  const queryParam = await Lang.getParamFromList({ name, list });
+  return queryParam ?? defaultKey;
+}
+
+viewof masterLanguage = Inputs.radio(languages, {
+  label: "Main language toggle",
+  format: (d) => d.key,
+  value: languages.find((x) => x.key === defaultLangKey),
+})
+
+_lang = Lang.lg(masterLanguage.key)
+```
+
+```{ojs}
+// Helper function to create synchronized admin selectors
+// This creates a new selector that stays in sync with the master
+createSyncedAdminSelector = function(level, masterView, masterValue, options, uniqueId, labelKey, placeholderKey) {
+  // Create a new independent selector initialized with master's value
+  const selector = multiSelect({
+    inputLabel: _lang(cis[labelKey]),
+    inputId: `admin${level}Select-${uniqueId}`,
+    placeholderText: _lang(cis[placeholderKey]),
+    options: options,
+    selected: masterValue ? masterValue.slice() : [], // Initialize with current master value
+    maxSelections: 10
+  });
+  
+  // When this selector changes, update the master
+  selector.addEventListener('input', () => {
+    masterView.value = selector.value;
+    masterView.dispatchEvent(new Event('input', { bubbles: true }));
+  });
+  
+  // When master changes, update this selector
+  // This creates a reactive dependency on masterValue
+  if (masterValue && JSON.stringify(selector.value) !== JSON.stringify(masterValue)) {
+    selector.value = masterValue.slice();
+  }
+  
+  return selector;
+}
+```
+
+```{ojs}
 //| echo: false
 
-// Hero section - nbTitle and hero_url are defined in source code section
+// Hero section
 hero_url = "./../../images/default_crop.webp";
+nbTitle = _lang({
+  en: "Identifying Climate Information Readiness",
+  fr: "Identifiant la Readiness des informations climatiques",
+});
 atlasHero(nbTitle, hero_url);
 ```
 
@@ -78,12 +140,8 @@ actually appearing in the notebook.
 <!-- Text and Language Translations -->
 
 ```{ojs}
-// This cell is to contain all the headings and the notebook title
-nbTitle = _lang({
-  en: "Identifying Climate Information Readiness",
-  fr: "Identifiant la Readiness des informations climatiques",
-});
-
+// This cell is to contain additional headings
+// (nbTitle is now defined earlier before the includes)
 // key_insights = _lang({en: "Key Insights", fr: "Résumé"})
 heading1 = _lang({ en: "Heading 1", fr: "Titre 1" });
 heading2 = _lang({ en: "Heading 2", fr: "Titre 2" });
@@ -111,32 +169,6 @@ keyInsights = {
 }
 ```
 
-```{ojs}
-import { lang as Lang } from "/helpers/lang.js"
-
-general_translations = await FileAttachment("/data/shared/generalTranslations.json").json()
-
-languages = [
-  { key: "en", label: "English", locale: 'en-US' },
-  { key: "fr", label: "Français", locale: 'fr-FR' }
-]
-
-defaultLangKey = {
-  const name = "lang";
-  const list = languages.map((d) => d.key);
-  const defaultKey = "en";
-  const queryParam = await Lang.getParamFromList({ name, list });
-  return queryParam ?? defaultKey;
-}
-
-_lang = Lang.lg(masterLanguage.key)
-
-viewof masterLanguage = Inputs.radio(languages, {
-  label: "Main language toggle",
-  format: (d) => d.key,
-  value: languages.find((x) => x.key === defaultLangKey),
-})
-```
 
 ```{ojs}
 // import { NavbarLangSelector } from "/helpers/uiComponents.ojs"
